<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_add_bank_account">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="420dp"
        android:layout_height="70dp"
        android:background="#3D5AFE"
        android:gravity="center"
        android:orientation="vertical"
        android:text="@string/add_bank_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FBF9F9"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addBankName"
        android:layout_width="376dp"
        android:layout_height="52dp"
        android:ems="10"
        android:hint="@string/enter_bank_name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/addAccNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/addAccNo"
        android:layout_width="376dp"
        android:layout_height="52dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_acc_no"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/addBankBal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addBankBal"
        android:layout_width="376dp"
        android:layout_height="52dp"
        android:layout_marginBottom="368dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/enter_available_bal"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/addBankBtn"
        android:layout_width="73dp"
        android:layout_height="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBankBal"
        app:layout_constraintVertical_bias="0.132"
        app:srcCompat="@drawable/plus" />

</androidx.constraintlayout.widget.ConstraintLayout>